# Internal-Angle-Calculator

./: .gitignore  README.md  pyproject.toml
src/internal_angle_calculator/: __init__.py  internal_angle_calculator.py
